--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,7 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        compile 'io.socket:socket.io-client:0.6.1'
     }
 }
 
