--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "engine.io": "^1.5.4",
     "express": "^4.13.3",
     "socket.io": "^1.3.6"
   }
